--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,11 +9,6 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
-Imports:
-  dplyr,
-  stringr,
-  tidyr,
-  sf,
-  magrittr
+Imports: dplyr, stringr, tidyr, sf, magrittr
 Suggests: testthat
 Depends: R (>= 2.10)
